Добавил Hover, Active

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <section class="seo-block">
           <h3 class="visually-hidden">Подробнее о нашем магазине</h3>
-          <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
+          <h1 class="seo-header">Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
           <ul class="seo-list">
             <li class="seo-item">
               <p class="seo-content">
@@ -254,8 +254,8 @@
           <h3 class="visually-hidden">Наши новости</h3>
           <article class="news-item">
             <h3 class="visually-hidden">Новости нашего блога</h3>
-            <span>Новое в нашем блоке</span>
-            <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+            <p class="news-header">Новое в нашем блоке</p>
+            <a class="links" href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
           <div class="news-item">
             <p class="news-content">
