--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,11 @@
     </div>
     <div class="header-item2">
       <div class="search-block">
-        <a class="link-search" href="#">Поиск</a>
+        <a class="link-search" href="#">
+          <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
+            <path class="search-svg-path" fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
+          </svg>
+        </a>
         <div class="search-form">
           <form action="https://echo.htmlacademy.ru/" id="search-form" method="GET">
             <input class="type-text" type="text" name="search-form" placeholder="Что ищем?">
@@ -61,7 +65,15 @@
       </div>
       <ul class="user-profile">
         <li class="profile-signin">
-          <a href="#" aria-label="Вход в личный кабинет">Вход</a>
+          <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
+              <g class="signin-svg" fill="#fff">
+                <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/>
+                <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/>
+              </g>
+            </svg>
+            <span>Вход</span>
+          </a>
         </li>
         <li class="signin-popup">
           <div class="signin-popup-inner">
@@ -75,19 +87,27 @@
                 <label for="signin-password" class="visually-hidden">Введите пароль</label>
               </p>
               <p class="form-submit">
-                <button class="signin-button btn-hover btn-active" type="submit" name="button" form="signin-form">Войти</button>
+                <button class="signin-button btn" type="submit" name="button" form="signin-form">Войти</button>
               </p>
             </form>
             <p class="signin-links">
-              <a href="#">Забыли пароль?</a>
-              <a href="#">Новая регистрация</a>
+              <a class="links" href="#">Забыли пароль?</a>
+              <a class="links" href="#">Новая регистрация</a>
             </p>
           </div>
         </li>
       </ul>
       <div class="shipcart-block">
         <span class="item-shipcart full-shipcart">
-          <a href="#">2 товара</a>
+          <a  class="shipcart-link" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+              <path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
+              <circle class="shipcart-svg" fill="#ffffff" cx="6.984" cy="18" r="2"/>
+              <circle class="shipcart-svg"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
+              <path class="shipcart-svg"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
+            </svg>
+            <span>2 товара</span>
+          </a>
         </span>
         <div class="shipcart-popup">
           <table class="shipcart-table">
@@ -165,9 +185,9 @@
     <section class="filters-block">
 
       <h3 class="visually-hidden">Фильтр</h3>
-
+      <p class="filters-header">Сливочное мороженное</p>
       <form action="https://echo.htmlacademy.ru/" id="filter-form" method="GET">
-        <fieldset class="filter-sort">
+        <fieldset class="fieldset filter-sort">
           <legend>Сортировка:</legend>
           <select form="filter-form" name="filter-form">
             <option value="popular">по популярности</option>
@@ -176,13 +196,13 @@
           </select>
         </fieldset>
         <div class="filter-range">
-          <span>Цена: 100 руб. - 500 руб.</span>
+          <span class="fieldset">Цена: 100 руб. - 500 руб.</span>
           <div class="range">
             <span></span>
             <span></span>
           </div>
         </div>
-        <fieldset class="fatty-filter">
+        <fieldset class="fieldset fatty-filter">
           <legend>Жирность:</legend>
           <input class="visually-hidden" type="radio" id="0" value="0" name="fatty">
           <label for="0">0%</label>
@@ -193,7 +213,7 @@
           <input class="visually-hidden" type="radio" id="over30" value="over30" name="fatty">
           <label for="over30">Выше 30%</label>
         </fieldset>
-        <fieldset class="filler-filter">
+        <fieldset class="fieldset filler-filter">
           <legend>Наполнители:</legend>
           <input class="visually-hidden" type="checkbox" id="chocolate" value="chocolate" name="filler" checked>
           <label for="chocolate">Шоколадные</label>
