--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
       </div>
       <div class="header-item2">
         <div class="search-block">
-          <a class="link-search" href="#">Поиск</a>
+          <a class="link-search" href="#">
+            <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
+              <path class="search-svg-path" fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
+            </svg>
+          </a>
           <div class="search-form">
             <form action="https://echo.htmlacademy.ru/" id="search-form" method="GET">
               <input class="type-text" type="text" name="search-form" placeholder="Что ищем?">
@@ -61,7 +65,15 @@
         </div>
         <ul class="user-profile">
           <li class="profile-signin">
-            <a href="#" aria-label="Вход в личный кабинет">Вход</a>
+            <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
+                <g class="signin-svg" fill="#fff">
+                  <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/>
+                  <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/>
+                </g>
+              </svg>
+              <span>Вход</span>
+            </a>
           </li>
           <li class="signin-popup">
             <div class="signin-popup-inner">
@@ -79,15 +91,24 @@
                 </p>
               </form>
               <p class="signin-links">
-                <a href="#">Забыли пароль?</a>
-                <a href="#">Новая регистрация</a>
+                <a class="links" href="#">Забыли пароль?</a>
+                <a class="links" href="#">Новая регистрация</a>
               </p>
             </div>
           </li>
         </ul>
         <div class="shipcart-block">
           <span class="item-shipcart">
-            <a href="#">Пусто</a>
+            <span class="item-shipcart full-shipcart">
+              <a  class="shipcart-link" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+                  <circle class="shipcart-svg" fill="#ffffff" cx="6.984" cy="18" r="2"/>
+                  <circle class="shipcart-svg"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
+                  <path class="shipcart-svg"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
+                </svg>
+                <span>2 товара</span>
+              </a>
+            </span>
           </span>
         </div>
         <p class="time-work">
@@ -255,35 +276,37 @@
           <article class="news-item">
             <h3 class="visually-hidden">Новости нашего блога</h3>
             <p class="news-header">Новое в нашем блоке</p>
-            <a class="links" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+            <a class="news-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
           <div class="news-item">
             <p class="news-content">
               Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
               что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
             </p>
-            <form action="#" id="subscribe-form" method="GET">
-              <input type="text" name="subscribe-form" placeholder="Электронная почта">
-              <button class="btn" type="submit" form="subscribe-form">Отправить</button>
+            <form action="https://echo.htmlacademy.ru/" id="subscribe-form" method="GET">
+              <input class="type-text" type="text" name="subscribe-form" placeholder="Электронная почта">
+              <button class="subscribe-button btn" type="submit" form="subscribe-form">Отправить</button>
             </form>
           </div>
         </section>
     </main>
 
     <section class="address-block">
-      <h3 class="visually-hidden">Наше местонахождение</h3>
-      <div class="address-maps"></div>
-      <div class="address-item">
-        <p class="address-content">
-          Адрес главноего офиса и офлайн магазина:
-          <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
-        </p>
-        <p class="address-content">
-          Для заказов по телефону:
-          <b>8 812 450-25-25</b>
-          (c 10 до 20 ежедневно)
-        </p>
-        <a href="#callback btn">Форма обратной связи</a>
+      <div class="address-inner">
+        <h3 class="visually-hidden">Наше местонахождение</h3>
+        <div class="address-maps"></div>
+        <div class="address-item">
+          <p class="address-content">
+            Адрес главноего офиса и офлайн магазина:
+            <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
+          </p>
+          <p class="address-content">
+            Для заказов по телефону:
+            <b>8 812 450-25-25</b>
+            (c 10 до 20 ежедневно)
+          </p>
+          <a href="#callback" class="callback-button btn">Форма обратной связи</a>
+        </div>
       </div>
     </section>
 
@@ -293,57 +316,61 @@
         <ul class="social-list">
           <li class="social-item">
             <a href="#">
+              <img src="img/twitter.svg" alt="twitter icon">
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
           <li class="social-item">
             <a href="#">
+              <img src="img/instagram.svg" alt="instagram">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="social-item">
             <a href="#">
+              <img src="img/fb.svg" alt="Facebook">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
           <li class="social-item">
             <a href="#">
+              <img src="img/vk.svg" alt="Vkontakte">
               <span class="visually-hidden">Vkontakte</span>
             </a>
           </li>
         </ul>
       </div>
-      <nav class="footer-menu">
-        <h3 class="visually-hidden">Дополнительная навигация по сайту.</h3>
-        <a href="#">Для поставщиков</a>
-        <a href="#">Наши документы</a>
-        <a href="#">О производстве</a>
-        <a href="#">Экологические стандарты</a>
+      <nav class="footer-menu" aria-label="Дополнительная навигация по сайту.">
+        <a class="links fmenu-bold" href="#">Для поставщиков</a>
+        <a class="links" href="#">Наши документы</a>
+        <a class="links" href="#">О производстве</a>
+        <a class="links" href="#">Экологические стандарты</a>
       </nav>
       <div class="footer-banner">
-        <img src="http://placehold.it/150x100" width="50" height="150" alt="HTML Academy 2017">
-        <p>html academy</p>
-        <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
+        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
+        <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>©2017</p>
       </div>
     </footer>
     <section id="callback" class="popup-callback">
       <h3 class="visually-hidden">Форма обратной связи</h3>
-      <p class="callback-content">Мы обязательно вам ответим!</p>
-      <form action="https://echo.htmlacademy.ru/" id="callback-form" method="GET">
-      <p class="callback-name">
-        <input class="type-text"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?">
-        <label for="callback-text-name" class="visually-hidden">Как вас зовут?</label>
-      </p>
-      <p class="callback-mail">
-        <input class="type-text"  type="text" id="callback-text-mail" name="callback-form" placeholder="Ваша почта?">
-        <label for="callback-text-mail" class="visually-hidden">Ваша почта?</label>
-      </p>
-      <p class="callback-area">
-        <textarea class="type-text"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
-        <label for="callback-text-area" class="visually-hidden">Напишите что-нибудь.</label>
-      </p>
-        <button class="btn" type="submit" form="callback-form">Отправить</button>
-      </form>
+      <div class="callback-inner">
+        <p class="callback-header">Мы обязательно вам ответим!</p>
+        <form action="https://echo.htmlacademy.ru/" id="callback-form" method="GET">
+        <p class="callback-name">
+          <input class="type-text"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?">
+          <label for="callback-text-name" class="visually-hidden">Как вас зовут?</label>
+        </p>
+        <p class="callback-mail">
+          <input class="type-text"  type="text" id="callback-text-mail" name="callback-form" placeholder="Ваша почта?">
+          <label for="callback-text-mail" class="visually-hidden">Ваша почта?</label>
+        </p>
+        <p class="callback-area">
+          <textarea class="type-text"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
+          <label for="callback-text-area" class="visually-hidden">Напишите что-нибудь.</label>
+        </p>
+          <button class="callback-submit btn" type="submit" form="callback-form">Отправить</button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
