--- a/index.html
+++ b/index.html
@@ -98,17 +98,15 @@
           </li>
         </ul>
         <div class="shipcart-block">
-          <span class="item-shipcart">
-            <span class="item-shipcart full-shipcart">
+          <span class="item-shipcart shipcart">
               <a  class="shipcart-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
-                  <circle class="shipcart-svg" fill="#ffffff" cx="6.984" cy="18" r="2"/>
-                  <circle class="shipcart-svg"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
-                  <path class="shipcart-svg"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
+                  <circle class="shipcart-icon" fill="#ffffff" cx="6.984" cy="18" r="2"/>
+                  <circle class="shipcart-icon"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
+                  <path class="shipcart-icon"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
                 </svg>
-                <span>2 товара</span>
+                <span class="shipcart-total-empty">Пусто</span>
               </a>
-            </span>
           </span>
         </div>
         <p class="time-work">
