--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <header>
+    <header class="header-wrap">
       <div class="header-item1">
         <div class="header-logo">
           <a>
@@ -20,8 +20,8 @@
           <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
           <ul class="menu-list">
             <li class="menu-item item-active">
-              <a href="#">
-                <span class="menu-value">Каталог</span>
+              <a href="#" class="menu-link">
+                <span>Каталог</span>
               </a>
               <ul class="popup-menu-list">
                 <li class="popup-menu-item">
@@ -42,10 +42,14 @@
               </ul>
             </li>
             <li class="menu-item">
-              <a href="#">Доставка и оплата</a>
+              <a href="#" class="menu-link">
+                <span>Доставка и оплата</span>
+              </a>
             </li>
             <li class="menu-item">
-              <a href="#">О Компании</a>
+              <a href="#" class="menu-link">
+                <span>О Компании</span>
+              </a>
             </li>
           </ul>
         </nav>
